# debate-bench

./: .gitignore  .npmrc  AGENTS.md  README.md  analysis_sample5_final.md  buildout.md  pyproject.toml  ui-overhaul.md
.github/workflows/: ci.yml
configs/: config.yaml  judges.yaml  models.yaml  quick-test-models.yaml  topics.json
dashboard/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  posthog-setup-report.md
dashboard/src/: instrumentation.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ChartBuilder.tsx  ChartCard.tsx  LoadState.tsx  VegaLiteChart.tsx
dashboard/src/hooks/: useCompareQuery.ts  useHighlightsState.ts  usePricingData.ts
dashboard/src/lib/: apiTypes.ts  compareLimits.ts  env.ts  featureFlags.ts  format.ts  highlights.ts  jsonl.ts  metrics.ts  pricing.ts  rateLimit.ts  types.ts  vegaTheme.ts
dashboard/src/store/: useDataStore.ts
debatebench/: __init__.py  cli.py  config.py  costs.py  debate.py  judge.py  models.py  openrouter.py  plot_style.py  rating.py  schema.py  settings.py  storage.py
debatebench/cli/: __init__.py  __main__.py  app.py  common.py  init.py  inspect.py  leaderboard.py  plot.py  rate.py  run.py  sample.py  summarize.py  upload.py
docs/: artifacts.md  cli-reference.md  config-guide.md  dashboard-api.md  dashboard-ingestion.md  dashboard.md  dev-workflow.md  results-schema.md  run-workflows.md  troubleshooting.md  website_buildout.md
notebooks/: viz.ipynb
scripts/: backfill_costs.py  extra_plots.py  plot_viz.py
tests/: test_config_parse.py  test_schedule.py
(+53 files in other folders)
