[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debatebench"
version = "0.1.0"
description = "CLI tool for debate-style LLM benchmarking"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Debate Bench Maintainers" }
]
dependencies = [
  "typer>=0.9,<1.0",
  "rich>=13.7,<14.0",
  "pydantic>=1.10,<2.0",
  "PyYAML>=6.0"
]

[project.scripts]
debatebench = "debatebench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["debatebench"]
